--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "^9.13.0",
+    "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.0",
     "@types/node": "^22.8.1",
     "eslint": "^9.13.0",
@@ -26,6 +27,7 @@
     "typescript-eslint": "^8.11.0"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.21.1"
   }
 }
