--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/http-errors": "^2.0.4",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/mongoose": "^5.11.96",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.8.1",
     "eslint": "^9.13.0",
     "globals": "^15.11.0",
@@ -36,6 +37,7 @@
     "express": "^4.21.1",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.7.3"
+    "mongoose": "^8.7.3",
+    "multer": "^1.4.5-lts.1"
   }
 }
