Feat: Add CORS support

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,8 @@
 PORT=5513
+NODE_ENV=development
+FRONTEND_DOMAIN=http://localhost:3000
+MONGO_URI=
+JWT_SECRET=
+CLOUDINARY_CLOUD=
+CLOUDINARY_API_KEY=
+CLOUDINARY_SECRET=
